assets/css/styleAR.css
@import url(http://fonts.googleapis.com/earlyaccess/droidarabickufi.css);

body {
  opacity: 1;
  transition: 1s opacity;
  -webkit-transition: all ease 0.5s;
  -moz-transition: all ease 0.5s;
}
body.fade-out {
  opacity: 0;
  transition: none;
  -webkit-transition: all ease 0.5s;
  -moz-transition: all ease 0.5s;
}
html {
  background-color: #ffffff;
}
nav {
  position: fixed;
  /*opacity: 0.3;*/
  top: 0;
  z-index: 200;
  background-color: rgba(255,255,255,.9);
}

nav a {
  font-family: 'Droid Arabic Kufi', serif;
  color: #2196f3;
}

nav ul a,
nav .brand-logo {
  color: #444;
  width: auto;
}

section {
  padding-top: 50px;
}

p {
  line-height: 2rem;
}

.button-collapse {
  color: #26a69a;
}

.parallax-container {
  min-height: 380px;
  line-height: 0;
  height: auto;
  color: rgba(255,255,255,.9);
}
.parallax-container .section {
  width: 100%;
}

@media only screen and (max-width : 992px) {
  .parallax-container .section {
    position: absolute;
    top: 40%;
  }
  #index-banner .section {
    top: 10%;
  }
}

@media only screen and (max-width : 600px) {
  #index-banner .section {
    top: 0;
  }
}
@media only screen and (max-width : 747px) {
  .dropdown-button {
    margin-top: 10px;
  }
}
.dropdown-button {
  margin-top: 10px;
  background-color: #2196f3;
}
.dropdown-button:hover {
  background-color: #085391;
}
.icon-block {
  padding: 0 15px;
}
.icon-block .material-icons {
  font-size: inherit;
  color:#2196f3;
}

footer.page-footer {
  margin: 0;
}
.back-to-top {
  background: #2196f3;
  cursor: pointer;
  position: fixed;
  bottom: 20px;
  right: 20px;
  display:none;
  border-style: none;
  z-index: 200;
}
.back-to-top:hover {
  background-color: #085391;
}

.TextArabic {
  text-align: right;
  font-size: 20px;
  font-family: 'Droid Arabic Kufi', serif;
}

.TextHeadArabic {
  font-family: 'Droid Arabic Kufi', serif;
  color: #2196f3;
}

/*Cards Page3*/
.page2PopOut {
  font-family: 'Droid Arabic Kufi', serif;
  color: #2196f3;
  float: right;
  margin-top: 10px;
}


.card .card-content .card-title{
  font-family: 'Droid Arabic Kufi', serif;
  color: #2196f3;
  font-size: 20px;
}
.card .card-reveal .card-title {
 color: #2196f3;
}
.card .card-reveal {
  background-color: rgba(255, 255, 255, 0.9);
  font-size: 13px;
  font-family: 'Droid Arabic Kufi', serif;
}
.card-images:hover {
 background: rgba(251, 3, 71, 0.7);
 transition: all ease 0.5s;
 -webkit-transition: all ease 0.5s;
 -moz-transition: all ease 0.5s;
 cursor: pointer;
}
.hoverable:hover {
  box-shadow: 0 8px 17px 0 rgba(33, 150, 243, 0.2), 0 6px 20px 0 rgba(33, 150, 243, 0.19);
}
.waves-effect.waves-blue .waves-ripple {
  background-color: rgba(33, 150, 243, 0.2);
}

.test {
  opacity: 0;
}

.btn-floating.btn-large {
  font-family: 'Droid Arabic Kufi', serif;
  width: 200px;
  height: 200px;
  font-size: 30px;
  padding-top: 20px;
}

.TestRound {
  border-radius: 200px;
}
.card {
  border-radius: 500px;
}
.card .card-image img {
  margin-left: 100px;
  height: 100px;
  width: 100px;
  padding: 10px;
}
.card .card-reveal {
  border-radius: 400px;
}
.btn-floating.btn-large i {
  font-size: 280px;
  color : rgba(255, 255, 255, 0.5);
}
.btn-floating {
  background-color: #2196f3;
  top: 50px;
}
.btn-floating:hover {
  background-color: #085391;
}
.wave-ripple {
  border-radius: 400px;
}

.delay-1 {
animation-delay: .25s;
}
.delay-2 {
animation-delay: .5s;
}
.delay-3 {
animation-delay: .75s;
}
.delay-4 {
animation-delay: 1s;
}

